# kids-vocab-tauri

./: .gitignore  build-app.bat  package-lock.json  package.json  proxy-server.mjs
design/: PRD-v2.0.md  garden-theme-drag.html  garden-theme-mvp.html  garden-theme-v1.html  garden-theme-v2.html  garden-theme-v3.html  产品设计方案-v1.0.md
docs/superpowers/plans/: 2026-06-10-kids-vocab-full-app.md
src/: PRD-v2.0.md  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  lib.rs  models.rs
src/css/: style.css
src/js/: app.js  history.js  home.js  quiz.js  result.js  settings.js  wordbank.js  wrongbook.js
